
  * New upstream release
  * debian/control: migrate doxygen to Build-Depends-Indep
  * debian/control: use new dpkg fields
  * configure.in : tidy up use of qofsql for embedded use
  * make the sqlite backend build by default
  * Remove GFDL from debian/copyright and migrate to standards 3.7.3
  * Migrate to libgda3-3
  * qof -- Please consider transitioning to libgda3 (Closes: #455835)

 -- Neil Williams <codehelp@debian.org>  Thu, 13 Dec 2007 23:00:11 +0000

qof (0.7.2-1) unstable; urgency=low

  * New upstream release.
  - upgrade binNMU support to avoid deprecated Source-Version
  * Change my email address to new Debian one.

 -- Neil Williams <codehelp@debian.org>  Mon, 27 Nov 2006 09:43:43 +0000

qof (0.7.1-3) unstable; urgency=low

  * debian/control: Fix circular dependency (Closes: #387196)

 -- Goedson Teixeira Paixao <goedson@debian.org>  Fri, 15 Sep 2006 10:32:20 -0300

qof (0.7.1-2) unstable; urgency=low

  * Fix priority setting of the two new backend packages. 

 -- Neil Williams <linux@codehelp.co.uk>  Tue, 12 Sep 2006 00:12:46 +0100

qof (0.7.1-1) unstable; urgency=low

  * New upstream release. 
  - Two new packages: XML and SQLite backend modules.

 -- Neil Williams <linux@codehelp.co.uk>  Tue, 29 Aug 2006 09:25:27 +0100

qof (0.7.0-2) unstable; urgency=low

  * FTBFS on hppa, sparc and m68k: date test failures (Closes: #383746)

 -- Neil Williams <linux@codehelp.co.uk>  Mon, 21 Aug 2006 20:22:34 +0100

qof (0.7.0-1) unstable; urgency=low

  * New upstream release.
  - Rewritten date and time handling for full range support
    using QofTime (seconds) and QofDate (calendar).
  - New QOF parameter type added : QOF_TYPE_TIME
  - QOF_TYPE_DATE and Timespec both deprecated.
  - New QOF extension code for strftime and strptime, as used 
    in coreutils.
  - Added Undo and redo handling.
  - libqof-doc : New package for QOF Doxygen Developer Reference
    and website content.
  - Upgrade to debhelper compat 5, standards version 3.7.2